--- a/views/shipper.jade
+++ b/views/shipper.jade
@@ -6,8 +6,7 @@ html
     script(src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.js")
   body
     h1 App user
-    button#sendLocationButton Send location to server
     div#notificationArea
-    script(src="/javascripts/script.js")
+    script(src="/javascripts/shipperScript.js")
 
     
